# crow-idl

./: .clang-format  .gitattributes  .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  IDL.ts  README.md  builder.ts  bunfig.toml  conanfile.py  eslint.config.js  index.ts  package.json  tsconfig.json
.husky/: pre-commit  pre-push
cmake/: ConanLibImports.cmake
cpptests/: CMakeLists.txt  CMakePresets.json  ConanLibImports.cmake  common.cppm  conan_provider.cmake  conanfile.py  gen.cppm  gen.hpp  gen.ts  generate.ts  test-input.ts
cpptests/config/: .gitignore  ConanLibImports.cmake  EarlyConfig.cmake  Extras.cmake  TheBasics.cmake  conan_provider.cmake  wrapper-gxx
cpptests/tests/: CMakeLists.txt  gen.cppm  json_test.cpp  json_test_module.cpp  xproc_test.cpp  xproc_test_module.cpp
src/: IDL.ts  crow-idl-index.ts  crow-idl.ts  gen.ts  ts-class-graph.ts  type.d.ts  types.ts
src/__tests__/: basic.test.ts  gen.test.ts  not-ready-gen-test
src/crow-idl/: IDL.ts  filter.ts  typechecks.ts  types.ts
src/crow-idl/__tests__/: basic.test.ts  gen.test.ts  xproc.test.ts  xproc_module.test.ts
src/crow-idl/emitters/: api.ts  cpp.ts  crow_header.hpp  typescript.ts
src/emitters/: api.ts  cpp.ts  typescript.ts
